# oxsb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  build.rs  flake.nix
.github/workflows/: ci.yml
40/5da17c512b/: metadata.json
40/5da17c512b/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
5f/20ec899a46/: metadata.json
5f/20ec899a46/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
5f/8b858b9b18/: metadata.json
5f/8b858b9b18/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
73/9513eeebea/: metadata.json
73/9513eeebea/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
92/0a1b03ab9c/: metadata.json
92/0a1b03ab9c/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
bb/f07aef4444/: metadata.json
bb/f07aef4444/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
cc/44b70b5585/: metadata.json
cc/44b70b5585/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
d3/bd1f7d7e32/: metadata.json
d3/bd1f7d7e32/0/: content_hash.txt  context.md  full.jsonl  metadata.json  (+1 more)
examples/: config_default.yaml
src/: cli.rs  error.rs  expand.rs  lib.rs  main.rs
src/backend/: bubblewrap.rs  landlock.rs  mod.rs  none.rs  seatbelt.rs  selector.rs
src/config/: loader.rs  mod.rs  schema.rs
src/env/: detect.rs  mod.rs
tests/: integration.rs
tests/fixtures/: config_full.yaml  config_minimal.yaml  config_optional_paths.yaml
tests/integration/: bubblewrap_test.rs  config_load_test.rs  expand_test.rs
